--- a/html/My Opinion.html
+++ b/html/My Opinion.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div style="text-align: center;">
-        <a href="/index.html">Home</a>    |
+        <a href="../index.html">Home</a>    |
         <a href="Comparative Goalies.html">Comparative Goalies</a>  |
         <a href="#">My Opinion</a>   |
         <a href="Robin Lehner Facts.html">Robin Lehner Facts</a>   |
