--- a/html/Robin Lehner Facts.html
+++ b/html/Robin Lehner Facts.html
@@ -16,7 +16,7 @@
     </div>
     <div >
         <div style="text-align: center;">
-            <a href="/index.html">Home</a>    |
+            <a href="../index.html">Home</a>    |
             <a href="Comparative Goalies.html">Comparative Goalies</a>  |
             <a href="My Opinion.html">My Opinion</a>   |
             <a href="#">Robin Lehner Facts</a>   |
